2011-08-07  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Implement --download-only and --print-uris options.

	* src/pkgopts.h (OPTION_DOWNLOAD_ONLY, OPTION_PRINT_URIS):
	New manifest constants, identifying flag bits; define them.
	(OPTION_DNLOAD_ONLY): Likewise; an alias for OPTION_DOWNLOAD_ONLY.

	* src/pkgbase.h (pkgActionItem::PrintURI): New private method.
	* src/pkginet.cpp: Implement it.

	* src/clistub.c (options): Add "download-only" and "print-uris".
	(help_text): Document them.
	* src/pkgexec.cpp (pkgActionItem::Execute): Process them.

2011-07-29  Keith Marshall  <keithmarshall@users.sourceforge.net>

	mingw-get-0.3-mingw32-alpha-2.1 released.

	* configure.ac (AC_INIT): Adjust version number.
	* srcdist-doc/NEWS.in: Updated; document bugs fixed.
	* All files (r0-3-alpha-2-1): Tag assigned.

2011-07-29  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Adopt tar.xz as default package archive format.

	* Makefile.in (TARZIP, TAREXT): New macros; define them.
	(bindist, licdist, srcdist): Use them in place of hardcoded tar.gz
	(maintainer-clean): Expunge tar files of any compression format.

2011-07-27  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct handling of release status in requirements specifications.

	* src/debug.h (DEBUG_TRACE_DEPENDENCIES): New tracing hook; define it.
	* src/pkgexec.cpp (pkgActionItem::SelectIfMostRecentFit): Use it; add
	function entry/exit tracing report hooks.
	* src/pkgdeps.cpp (pkgXmlDocument::ResolveDependencies): Likewise;
	also add internal trace point reporting, which may also require...
	(show_required): ...this new static inline DEBUG_INVOKED function.

	* src/pkgreqs.cpp (requirement): Propagate release status and release
	reference index fields from requirer, when package version requirement
	is specified by a '%' token, and no explicit release status override
	is included in the requirement specification.

	* src/pkgspec.cpp (is_wildcard_spec): New static inline helper.